Restructure backend and add AppUser/Role
Move backend sources to top-level src/ and rename project files (mvnw, pom, tests) to simplify layout. Add AppUser entity, Role enum and AppUserRepository to prepare for authentication/authorization and attach a createdBy (AppUser) relation to Question (constructors/getters updated). Add EnvConfig to enable .env loading, include favicon resource and a WebConfig resource handler, and add favicon file. Update application.properties to support env defaults, PostgreSQL dialect and suppress resource-not-found noise. Extend GlobalExceptionHandler to handle NoResourceFoundException. Update pom.xml to include Spring Security, validation and JWT dependencies. Update tests to use list indexing (get(0)). Add build_output.txt, remove docker-compose.yml, and add .env to .gitignore.